# Yapay-Zeka-Destekli-Agent-ile-3B-Modelleme

./: .gitignore  Catalog.json  README.md  add_asset.py  auto_categorize.py  blender_assets.cats.txt  recategorize_existing.py  taxonomy.json  test_blender.py  test_exec.py
asset-library-mcp/: make_addon_zip.py  material_presets.json  prompt_builder.html  pyproject.toml  run_team.py
asset-library-mcp/agents/: __init__.py  _prompt_loader.py  api.py  blender_executor.py  furniture_selector.py  layout_designer.py  prompt_coach.py  space_analyst.py  team.py
asset-library-mcp/agents/tools/: __init__.py  blender_tools.py  catalog_tools.py  layout_tools.py
asset-library-mcp/blender_addon/: __init__.py
asset-library-mcp/blender_addon/handlers/: __init__.py  blend_import.py  generate.py  room.py
asset-library-mcp/blender_addon/operators/: server_operator.py
asset-library-mcp/blender_addon/server/: http_server.py
asset-library-mcp/mcp_server/: blender_client.py  catalog.py  server.py
asset-library-mcp/mcp_server/tools/: __init__.py  catalog_management_tools.py  catalog_tools.py  import_tools.py  interior_design_tools.py  size_reference.py
asset-library-mcp/ui/: asset-manager.html  index.html
asset-library-mcp/ui/css/: app.css
asset-library-mcp/ui/js/: app.js  coach.js  draw.js  materials.js  models.js  scene.js  sistem.js  sketchfab.js  state.js  window-views.js
docs/: Yapay Zeka Destekli Agent ile 3B Modelleme.docx  Yapay Zeka Destekli Agent ile 3B Modelleme.pptx
schema/: catalog_schema.json
